--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<p> hello world </p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title> page title </title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <p> hello world </p>
+  </body>
+</html>
+  
