--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> page title </title>
+    <title> who am I </title>
     <meta charset="utf-8">
   </head>
   <body>
-    <p> hello world </p>
+    Jean Valijean<br>
+    55 Rue Plumet <br>
+    Amonate, VA 24601 
   </body>
 </html>
-  
