--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
   </head>
   <body>
-    Jean Valijean<br>
-    55 Rue Plumet <br>
-    Amonate, VA 24601 
+    Jean Valijean
+    55 Rue Plumet
+    Amonate, VA 24601
   </body>
 </html>
