--- a/moby_dick.html
+++ b/moby_dick.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
   <head>
     <title>Moby Dick</title>
@@ -27,7 +28,7 @@
     </div>
 
     <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
-      <img src="images/sperm_whales.jpg">
+      <img src="images/sperm_whales.jpg" alt="sperm_whale">
     </a>
 
     <div>
